--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -12,6 +12,10 @@ provider:
       Action:
         - iot:*
       Resource: "*"
+    - Effect: "Allow"
+      Action:
+        - s3:*
+      Resource: "*"
 
 functions:
   handler:
