--- a/serverless/package.json
+++ b/serverless/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aws-sign-mqtt": "^0.0.1",
+    "got": "^9.0.0",
     "mqtt": "^2.18.3",
     "pdflatex-lambda": "^0.0.6",
     "unzip-stream": "^0.3.0"
